# safe-mcp-scanner

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION.md  README.md  pyproject.toml
docs/: README.md
docs/contributing/: development-setup.md
docs/examples/: README.md
docs/techniques/: README.md
docs/usage/: installation.md
src/safe_mcp_scanner/: __init__.py  cli.py  config.py  file_discovery.py  reporter_factory.py  scanner.py  technique_loader.py
src/safe_mcp_scanner/detectors/: __init__.py  base.py  pattern_matcher.py
src/safe_mcp_scanner/reporters/: __init__.py  base.py  json_reporter.py
src/safe_mcp_scanner/techniques/: __init__.py  base.py  command_injection.py  malicious_tools.py
tests/: __init__.py  conftest.py  test_basic_functionality.py
tests/integration/: test_cli.py
tests/performance/: test_performance.py
tests/unit/: test_config.py  test_file_discovery.py  test_scanner.py  test_techniques.py
